# captura-text-portfolio-assets

./: .gitignore  .text.status.yaml  README.rst  RESUME.rst  WRAPPER.j2  builder.yaml  colors.j2  gencolors.py  home.rst  hooks.py  pyproject.toml  template.fmt  test.rst  text.yaml
acederbergio/: __init__.py  __main__.py  config.py  controllers.py  routers.py  schemas.py
acederbergio/templates/: colors.j2  gradient.j2
captura-text-assets/: template.fmt
captura-text-assets/css/: base.css  cards.css  colors.css  commits.css  home.css  index.css
captura-text-assets/pages/: ABOUT.rst  PROJECTS.rst  RESUME-OG.rst  RESUME.rst  RESUME.tex
css/: commits.css  index.css
docker/: dockerfile
pages/: ABOUT.rst  COMMITS.rst  HOME.rst  PROJECTS.rst  RESUME.rst
